syntax ="proto3";

package pb;

option go_package = ".";

service Coordinator {
    rpc CoordinatorSignupRequest(Signup)returns(Responce);
    rpc CoordinatorSignupVerifyRequest(Verify)returns(Responce);
    rpc CoordinatorLoginRequest(Login)returns(LoginResponce);
    rpc CoordinatorViewPackages(View)returns(PackagesResponce);
    rpc CoordinatorAddPackage(Package)returns(Responce);
    rpc CoordinatorAddFoodMenu(FoodMenu)returns(Responce);
    rpc CoordinatorViewFoodMenu(View)returns(FoodMenus);
    rpc CoordinatorAddDestination(Destination)returns(Responce);
    rpc CoordinatorAddActivity(Activity)returns(Responce);
    rpc CoordinatorViewPackage(View)returns(Package);
    rpc CoordinatorViewDestination(View)returns(Destination);
    rpc CoordinatorViewActivity(View)returns(Activity);
    rpc CoordinatorForgetPassword(ForgetPassword)returns(Responce);
    rpc CoordinatorForgetPasswordVerify(ForgetPasswordVerify)returns(Responce);
    rpc CoordinatorNewPassword(Newpassword)returns(Responce);
    rpc ViewCategories(View)returns(Categories);
    rpc ViewHistory(View)returns(Histories);
    rpc ViewBooking(View)returns(History);
    rpc ViewTraveller(View)returns(TravellerDetails);
    rpc ViewDashboard(View)returns(Dashboard);    
}

message Dashboard{
    int64 Wallet = 1;
    int64 Today = 2;
    int64 Monthly = 3;
}

message Histories{
    repeated History Histories = 1;
}

message History{
    int64  ID = 1;
    string Payment_Mode = 2;
    string Booking_Status = 3;
    string Cancelled_Status = 4;
    int64  Total_Price = 5;
    int64  User_ID = 6;
    string Booking_ID = 7;
    string Book_Date = 8;
    string Start_Date = 9;
    repeated TravellerDetails Travellers = 10;
    int64  Paid_Amount = 11;
}

message TravellerDetails {
    string Name = 1;
    string Age = 2;
    string Gender = 3;
    repeated string Activity_ID = 4;
    int64 ID = 5;
    repeated Activity Activity = 6;
}

message PackagesResponce{
    repeated Package Packages = 1;
}

message Categories{
    repeated Category Categories = 1;
}

message Verify{
    int32  OTP =1;
    string Email = 2;
}

message Responce{
    string Status = 1;
    string Message = 2;
    int64  ID = 3;
}

message Signup{
    string Name =1;
    string Email = 2;
    string Phone = 3;
    string Password = 4;
    string Role = 5;
}

message Newpassword{
    string New_Password = 1;
    string ID = 2;
}

message ForgetPasswordVerify{
    string OTP = 1;
    string Phone = 2;
}

message ForgetPassword{
    string Phone =1;
}

message View{
    int64  ID = 1;
    string Status = 2;
    int64  Page = 3;
}

message Login{
    string Email = 1;
    string Password = 2;
    string Role = 3;
}

message SignupResponce{
    string Status = 1;
    string Message = 2;
}

message Activity{
    int64  Activity_ID = 1;
    string Activity_Name = 2;
    string Description = 3;
    string Location = 4;
    string Activity_Type = 5;
    int64  Amount = 6;
    string Date = 7;
    string Time = 8;
    int64  Destination_ID = 9;
}

message FoodMenus{
    repeated FoodMenu Food_Menus = 1;
}

message FoodMenu {
    int64  Foodmenu_ID = 1;
    int64  Package_ID = 2;
    string Breakfast = 3;
    string Lunch     = 4;
    string Dinner    = 5;  
    string Date      = 6;  
}

message Destination{
    int64   Destination_ID = 1;
    string  Destination_Name = 2;
    string  Description = 3;
    int64   Min_Price = 4;
    int64   Max_Capacity = 5;
    string  Image = 6;
    repeated Activity Activity = 7;
    int64   Package_ID = 8;
    string  Transportation_Mode = 9;
    string  Arrival_Location   = 10;
}

message Package{
    int64  Package_ID = 1;
    string Package_Name = 2;
    int64  Coorinator_ID = 3;
    string Start_Location = 4;
    int64  Available_Space = 5;
    string Start_Date = 6;
    string Start_Time = 7;
    string End_Date = 8;
    int64  Price = 9;
    string Image = 10;
    int64  Destination_Count = 11;
    string Destination = 12;
    string Description = 13;
    int64  Max_Capacity = 14;
    int64  Category_ID = 15;  
    Category Category = 16;
    repeated Destination Destinations = 17;
}

message Category{
    int64 Category_ID = 1;
    string Category_Name = 2;
}

message LoginResponce{
    string Token = 1;
}
